# happstack

./: .authorspellings  CHANGELOG  CREDITS  RELEASE_NOTES  haddock-prologue.txt
HAppS-Contrib/: HAppS-Contrib.cabal  Setup.hs  happstack-contrib.cabal
HAppS-Contrib/src/HAppS/Server/: Facebook.hs
HAppS-Contrib/src/HAppS/Store/: FlashMsgs.hs  HelpReqs.hs
HAppS-Contrib/tests/: Test.hs
HAppS-DNS/: HAppS-DNS.cabal  happstack-dns.cabal  original-context.txt  package-info.xml
HAppS-DNS/src/HAppS/Network/: DNS.hs
HAppS-DNS/src/HAppS/Network/DNS/: Cache.hs  ChooseMethod.hs  HiWire.hs  LoWire.hs  MXClient.hs  MutableEnv.hs  NSTree.hs  Name.hs  RR.hs  Type.hs  Util.hs
HAppS-Data/: HAppS-Data.cabal  README  happstack-data.cabal  package-info.xml
HAppS-IxSet/: happstack-ixset.cabal  original-context.txt  package-info.xml
HAppS-IxSet/src/HAppS/Data/: IxSet.hs
HAppS-IxSet/src/HAppS/Data/IxSet/: Ix.hs  Usage.hs
HAppS-IxSet/tests/: Test.hs  tests.hs
HAppS-IxSet/tests/HAppS/Data/IxSet/: Tests.hs
HAppS-Plugins/: HAppS-Agents.cabal  original-context.txt  package-info.xml
HAppS-Plugins/src/HAppS/Agents/: MailSender.hs  SessionKeeper.hs  SessionKeeperEx.hs  Users.hs  WithBlockingIO.hs
HAppS-SMTP/: happstack-smtp.cabal  original-context.txt  package-info.xml
HAppS-SMTP/src/HAppS/Network/: SMTP.hs  SMTP2.hs  XSLTSMTP.hs
HAppS-Server/: HAppS-Server.cabal  happstack-server.cabal  package-info.xml
HAppS-State/: HAppS-State.cabal  happstack-state.cabal  package-info.xml  runTests.sh
HAppS-State/Examples/: CheckpointTest.hs
HAppS-State/src/HAppS/: State.hs
HAppS-State/src/HAppS/State/: Checkpoint.hs  ComponentSystem.hs  ComponentTH.hs  Control.hs  Logger.hs  Monad.hs  Saver.hs  SessionKeeper.hs  Spread.hs  Transaction.hs  TxControl.hs  Types.hs  Util.hs
HAppS-State/src/HAppS/State/Saver/Impl/: File.hs  Memory.hs  Queue.hs  S3.hs
HAppS-State/tests/: CheckpointProperties.hs  Helpers.hs  RunTests.hs  SaverProperties.hs  Test.hs
HAppS-State/tests/HAppS/State/Tests/: CheckpointProperties.hs  Helpers.hs  SaverProperties.hs
HAppS-Util/: HAppS-Util.cabal  happstack-util.cabal
HAppS-Util/debian/: changelog  control  rules
HAppS-Util/src/HAppS/Crypto/: Base64.hs  DES.lhs  HMAC.hs  MD5.hs  SHA1.lhs  W64.hs
HAppS-Util/src/HAppS/Util/: ByteStringCompat.hs  Common.hs  Concurrent.hs  Daemonize.hs  EventHandler.hs  TH.hs  Testing.hs  TimeOut.hs
HAppS-Util/tests/: Makefile  Test.hs
HAppS-Util/tests/HAppS/Util/: Tests.hs
happstack/: CHANGELOG  COPYING  RELEASE_NOTES  happstack.cabal
happstack-contrib/: happstack-contrib.cabal
happstack-contrib/src/HAppS/Server/: Facebook.hs
happstack-contrib/src/HAppS/Store/: FlashMsgs.hs
happstack-contrib/src/Happstack/Contrib/: Atom.hs  HList.hs  HListBase.hs
happstack-contrib/src/Happstack/Server/: Facebook.hs
happstack-contrib/src/Happstack/Store/: FlashMsgs.hs  HelpReqs.hs
happstack-contrib/tests/: Test.hs
happstack-contrib/tests/HAppS/Contrib/: Tests.hs
happstack-contrib/tests/Happstack/Contrib/: Tests.hs
happstack-contrib/tests/Happstack/Contrib/Tests/: HList001.hs  HList002.hs  HasT001.hs  HasT001.run.stdout  HasT002.ghc.stderr  HasT002.hs  HasT003.ghc.stderr
happstack-data/: form.css  happstack-data.cabal  (+1 more)
happstack-jmacro/: happstack-jmacro.cabal
happstack-jmacro/Happstack/Server/: JMacro.hs
happstack-jmacro/Happstack/Server/HSP/: JMacro.hs
happstack-jmacro/examples/: Examples.lhs
happstack-plugins/: COPYING  happstack-plugins.cabal
happstack-plugins/Happstack/Plugins/: Dynamic.hs  FileSystemWatcher.hs  LiftName.hs  Plugins.hs  Static.hs
happstack-plugins/Happstack/Server/Plugins/: Dynamic.hs  Static.hs
happstack-plugins/demo/: HomePage.hs  Main.hs  Types.hs
happstack-tests/: COPYING  happstack-tests.cabal
happstack-tests/tests/: Makefile  Test.hs
happstack-tests/tests/HAppS/: Tests.hs
happstack-util/: happstack-util.cabal  original-context.txt
happstack-util/src/HAppS/Crypto/: HMAC.hs  MD5.hs  SHA1.lhs  W64.hs
happstack-util/src/HAppS/Util/: ByteStringCompat.hs  Common.hs  HostAddress.hs  Testing.hs  TimeOut.hs
happstack-util/src/Happstack/Crypto/: Base64.hs  DES.lhs  HMAC.hs  MD5.hs  SHA1.lhs  W64.hs
happstack-util/src/Happstack/Util/: AutoBuild.hs  ByteStringCompat.hs  Common.hs  Concurrent.hs  Cron.hs  Daemonize.hs  FileManip.hs  HostAddress.hs  LogFormat.hs  Mail.hs  OpenExclusiveWrite.hs  OpenExclusively.hs  TH.hs  Testing.hs  TimeOut.hs
happstack-util/tests/: Test.hs
happstack-util/tests/HAppS/Util/Tests/: HostAddress.hs
happstack-util/tests/Happstack/Util/: Tests.hs
happstack-util/tests/Happstack/Util/Tests/: HostAddress.hs
happstack-wai/: Main.hs  happstack-wai.cabal
happstack-wai/Happstack/Server/: Filters.hs  Guards.hs  Monads.hs  RqData.hs  Run.hs  Simple.hs  ToMessage.hs  Warp.hs
happstack/commands/: happstack.hs
happstack/src/HSP/: Identity.hs  IdentityT.hs  ServerPartT.hs  WebT.hs
happstack/src/HSP/Google/: Analytics.hs
happstack/src/Happstack/Server/: HSX.hs  HStringTemplate.hs
happstack/src/Happstack/Server/HSP/: HTML.hs
happstack/src/Happstack/State/: ClockTime.hs
happstack/templates/project/: .ghci  COPYING  guestbook.cabal
happstack/templates/project/public/: index.html
happstack/templates/project/public/entries/: new.html
happstack/templates/project/public/theme/: readme.txt  style.css
happstack/templates/project/src/: AppControl.hs  AppLogger.hs  AppState.hs  AppView.hs  GuestBook.hs  Logger.hs  Main.hs  Pages.hs  Routes.hs  State.hs
happstack/templates/project/src-interactive-only/: Paths_guestbook.hs
happstack/templates/project/src/App/: Control.hs  Logger.hs  State.hs  View.hs
happstack/templates/project/src/GuestBook/: Control.hs  State.hs  State2.hs  View.hs
happstack/templates/project/src/Pages/: AppTemplate.hs  Common.hs  GuestBookEntries.hs  PostEntry.hs  Readme.hs
happstack/templates/project/src/State/: GuestBook.hs
happstack/templates/project/src/Types/: GuestBook.hs
happstack/templates/project/templates/: readme.st
happstack/tests/: Test.hs
happstack/tests/Happstack/: Tests.hs
(+182 files in other folders)
