Name:                happstack-contrib
Version:             0.1
Synopsis:            Web related tools and services.
Description:         Collection of standalone applications
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack Team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Build-Type:          Simple
Cabal-Version:       >= 1.2

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library

  Exposed-modules:
                       HAppS.Server.Facebook
                       HAppS.Store.FlashMsgs
                       HAppS.Store.HelpReqs

  Build-Depends:       base, network, old-time, bytestring, happstack-server,
                       mtl, HTTP >= 4000.0.2, directory, happstack-util, happstack-data,
                       happstack-state, happstack-ixset

  hs-source-dirs:      src

  if !os(windows)
     Build-Depends:    unix
     cpp-options:      -DUNIX
  if flag(base4)
    Build-Depends:     base >= 4 && < 5, syb

  -- Should have ", DeriveDataTypeable, PatternSignatures" but Cabal complains
  Extensions:          CPP, TemplateHaskell, FlexibleInstances,
                       DeriveDataTypeable, MultiParamTypeClasses, TypeFamilies,
                       TypeSynonymInstances, ImplicitParams, TypeOperators,
                       UndecidableInstances
  ghc-options:         -Wall -fno-warn-orphans
  GHC-Prof-Options:    -auto-all
