Name:                HAppS-DNS
Version:             0.9.3.1
Synopsis:            Web related tools and services.
Description:         Web framework
License:             BSD3
License-file:        COPYING
Author:              Happstack team
Maintainer:          happs@googlegroups.com
Category:            Web, Distributed Computing
Build-Type:          Simple
Cabal-Version:       >= 1.2

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library

  Exposed-modules:
                       HAppS.Network.DNS

  Build-Depends:       base, network, bytestring, containers,
                       old-time,hslogger,HAppS-Util,random,
                       mtl
  hs-source-dirs:      src

  if !os(windows)
     Build-Depends:    unix
     cpp-options:      -DUNIX
  if flag(base4)
    Build-Depends:     base >= 4 && < 5, syb
    cpp-options:      -DEXCEPTION_TYPE=SomeException -DEXTENSIBLE_EXCEPTIONS
  else
    Build-Depends:     base >= 3 && < 4
    cpp-options:      -DEXCEPTION_TYPE=Exception

  -- Should have ", DeriveDataTypeable, PatternSignatures" but Cabal complains
  Extensions:          CPP, UndecidableInstances
  ghc-options:         -Wall -fno-warn-name-shadowing
  GHC-Prof-Options:    -auto-all
