Name:                happstack-smtp
Version:             0.1
Synopsis:            Web related tools and services.
Description:         Web framework
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          happs@googlegroups.com
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Build-Type:          Simple
Cabal-Version:       >= 1.2

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library

  Exposed-modules:
                       HAppS.Network.SMTP
                       HAppS.Network.XSLTSMTP

  Build-Depends:       base, happstack-dns==0.1, random,
                       process, old-time, filepath,
                       directory, network
  hs-source-dirs:      src

  if !os(windows)
     Build-Depends:    unix
     cpp-options:      -DUNIX
  if flag(base4)
    Build-Depends:     base >= 4 && < 5, syb
    cpp-options:      -DEXCEPTION_TYPE=SomeException -DEXTENSIBLE_EXCEPTIONS
  else
    Build-Depends:     base >= 3 && < 4
    cpp-options:      -DEXCEPTION_TYPE=Exception

  -- Should have ", DeriveDataTypeable, PatternSignatures" but Cabal complains
  Extensions:          CPP, UndecidableInstances
  ghc-options:         -Wall -fno-warn-name-shadowing
  GHC-Prof-Options:    -auto-all
