Name:                happstack-state
Version:             0.1
Synopsis:            Event-based distributed state.
Description:         Web framework
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Cabal-Version:       >= 1.2
Build-Type:          Simple

flag base4

Library

  Exposed-modules:     
                       HAppS.State
--                     HAppS.State.Logger
                       HAppS.State.Saver
                       HAppS.State.Control
                       HAppS.State.Transaction
                       HAppS.State.ComponentTH
                       HAppS.State.ComponentSystem
  Other-modules:       
                       HAppS.State.Checkpoint
                       HAppS.State.Spread
                       HAppS.State.Monad
                       HAppS.State.Saver.Impl.File
                       HAppS.State.Saver.Impl.Memory
                       HAppS.State.Saver.Impl.Queue
                       HAppS.State.Saver.Types
--                     HAppS.State.OperationModes
                       HAppS.State.Types
                       HAppS.State.Util
                       HAppS.State.TxControl
  Build-Depends:       mtl,stm, template-haskell, hslogger >= 1.0.2, happstack-util,
                       happstack-data, bytestring, containers, random, old-time,
                       directory, binary, filepath, hspread >=0.3, extensible-exceptions
  if flag(base4)
    Build-Depends:     base >= 4 && < 5, syb
  else
    Build-Depends:     base < 4

  hs-source-dirs:      src
  
  if !os(windows)
     Build-Depends:    unix
     cpp-options:      -DUNIX

  Extensions:          CPP  
  ghc-options:         -Wall
  GHC-Prof-Options:    -auto-all
