Cabal-version:       >=1.2
Name:                happstack-util
Version:             0.1
Synopsis:            Web framework
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Build-type:          Simple

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library
  Build-Depends:       mtl, hslogger >= 1.0.2, template-haskell, array,
                       bytestring, old-time, process, directory, extensible-exceptions
  if flag(base4)
    Build-Depends:       base >= 4
  else
    Build-Depends:       base < 4

  hs-source-dirs:      src
  Exposed-modules:     
                       HAppS.Crypto.Base64,
                       HAppS.Crypto.DES,
                       HAppS.Crypto.HMAC,
                       HAppS.Crypto.SHA1,
                       HAppS.Crypto.MD5,
                       HAppS.Crypto.W64,
                       HAppS.Util.ByteStringCompat
                       HAppS.Util.Common,
                       HAppS.Util.Concurrent,
                       HAppS.Util.Daemonize,
                       HAppS.Util.EventHandler,
                       HAppS.Util.TimeOut 
                       HAppS.Util.TH
  extensions:          CPP, ForeignFunctionInterface,
                       OverlappingInstances, UndecidableInstances,
                       RecursiveDo,
                       RankNTypes, FlexibleInstances,
                       TypeSynonymInstances
  ghc-options:         -W -fno-warn-incomplete-patterns
  GHC-Prof-Options:    -auto-all
