Name:                happstack-jmacro
Version:             0.2
Synopsis:            Support for using JMacro with Happstack
Homepage:            http://www.happstack.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@n-heptane.com
-- Copyright:           
Stability:           Provisional
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     Happstack.Server.JMacro
  Build-depends:
     base,
     bytestring,
     jmacro,
     happstack-server,
     utf8-string
