Name:               happstack-tests
Version:            0.1.9
License:            BSD3
License-File:       COPYING
Author:             Happstack team, HAppS LLC
Maintainer:         Happstack team <happs@googlegroups.com>
homepage:           http://happstack.com
Stability:          experimental
Category:           Web, Distributed Computing
Synopsis:           Happstack tests library
Description:
    This package provides the top-level tests for happstack. It also
    integrates all the per-modules tests.
Tested-With:        GHC==6.8.3, GHC==6.10.1
Build-Type:         Simple
Cabal-Version:      >=1.2

flag base4

Flag tests
    Description: Build the testsuite, and include the tests in the library
    Default: True

Library
  if flag(base4)
    Build-Depends:    base >=4 && < 5, syb
  else
    Build-Depends:    base < 4

  Build-Depends:      happstack-util, happstack-data, happstack-ixset, 
                      happstack-state, happstack-server, happstack-contrib
                      
  hs-source-dirs:     src
  if flag(tests)
    hs-source-dirs:    tests
  Exposed-modules:
  if flag(tests)
    Exposed-modules:   Happstack.Tests
  GHC-Options: -Wall

Executable happstack-tests
  Main-Is: Test.hs
  GHC-Options: -threaded
  Build-depends: HUnit
  hs-source-dirs: tests, src
  if flag(tests)
    Buildable: True
  else
    Buildable: False
