Cabal-version:       >=1.2.3
Name:                happstack-util
Version:             0.1.9
Synopsis:            Web framework
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Description:         Miscellaneous utilities for Happstack packages.
Build-type:          Simple

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Flag tests
    Description: Build the testsuite, and include the tests in the library
    Default: True

Library
  Build-Depends:       mtl, hslogger >= 1.0.2, template-haskell, array,
                       bytestring, old-time, process, directory, extensible-exceptions, 
                       HUnit, QuickCheck, random
  if flag(base4)
    Build-Depends:       base >= 4
  else
    Build-Depends:       base < 4

  hs-source-dirs:      src
  if flag(tests)
    hs-source-dirs:    tests
  Exposed-modules:     
                       Happstack.Crypto.Base64,
                       Happstack.Crypto.DES,
                       Happstack.Crypto.HMAC,
                       Happstack.Crypto.SHA1,
                       Happstack.Crypto.MD5,
                       Happstack.Crypto.W64,
                       Happstack.Util.ByteStringCompat,
                       Happstack.Util.Common,
                       Happstack.Util.Concurrent,
                       Happstack.Util.Daemonize,
                       Happstack.Util.HostAddress,
                       Happstack.Util.TimeOut,
                       Happstack.Util.TH,
                       Happstack.Util.Testing
  if flag(tests)
    Exposed-modules:   Happstack.Util.Tests
    Exposed-modules:   Happstack.Util.Tests.HostAddress

  extensions:          CPP, UndecidableInstances, BangPatterns, StandaloneDeriving,
                       DeriveDataTypeable, TemplateHaskell, RecursiveDo
  ghc-options:         -Wall
  GHC-Prof-Options:    -auto-all

Executable happstack-util-tests
  Main-Is: Test.hs
  GHC-Options: -threaded
  Build-depends: HUnit
  hs-source-dirs: tests, src
  if flag(tests)
    Buildable: True
    Build-Depends: network
  else
    Buildable: False

