Name:                happstack
Version:             0.1.9
Synopsis:            The haskell application server stack + code generation
Description:         The haskell application server stack
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Build-Type:          Simple
Cabal-Version:       >= 1.2.3

data-files:          templates/project/bin/run.sh
                     templates/project/bin/run-interactive.sh
                     templates/project/bin/build.sh
                     templates/project/guestbook.cabal
                     templates/project/Setup.hs
                     templates/project/src/AppControl.hs
                     templates/project/src/AppLogger.hs
                     templates/project/src/AppState.hs
                     templates/project/src/Main.hs
                     templates/project/public/theme/style.css
                     templates/project/public/theme/images/date.gif
                     templates/project/public/theme/images/ql_rss.gif
                     templates/project/public/theme/images/header_loop.gif
                     templates/project/public/theme/images/blockquote.gif
                     templates/project/public/theme/images/menu_hili.gif
                     templates/project/public/theme/images/grunge.gif
                     templates/project/public/theme/images/entrymeta.gif
                     templates/project/public/theme/images/logo.gif
                     templates/project/public/theme/images/peel.gif
                     templates/project/public/theme/images/menu_hover.gif
                     templates/project/public/theme/readme.txt

Library
  exposed-modules:     Happstack.Server.HSP.HTML
                       Happstack.State.ClockTime
  other-modules:       Paths_happstack

  build-depends:       happstack-server >= 0.1.9, happstack-state >= 0.1.9,
                       happstack-ixset >= 0.1.9, happstack-util >= 0.1.9,
                       happstack-data >= 0.1.9, base > 3,
                       hsp >= 0.4.5, utf8-string, bytestring, mtl, old-time

  hs-source-dirs:      src


  ghc-options:         -Wall

Executable happstack
  build-depends:       directory >= 1, filepath >= 1
  hs-source-dirs:      commands
  main-is:             happstack.hs

