Name:                happstack
Version:             0.1.9
Synopsis:            The haskell application server stack + code generation
Description:         The haskell application server stack
License:             BSD3
License-file:        COPYING
Author:              Happstack team, HAppS LLC
Maintainer:          Happstack team <happs@googlegroups.com>
homepage:            http://happstack.com
Category:            Web, Distributed Computing
Build-Type:          Simple
Cabal-Version:       >= 1.2.3

data-files:          CHANGELOG
                     CREDITS
                     RELEASE_NOTES
                     templates/project/bin/build.bat
                     templates/project/bin/build.sh
                     templates/project/bin/run-interactive.bat
                     templates/project/bin/run-interactive.sh
                     templates/project/bin/run.bat
                     templates/project/bin/run.sh
                     templates/project/guestbook.cabal
                     templates/project/public/theme/images/blockquote.gif
                     templates/project/public/theme/images/date.gif
                     templates/project/public/theme/images/entrymeta.gif
                     templates/project/public/theme/images/grunge.gif
                     templates/project/public/theme/images/header_loop.gif
                     templates/project/public/theme/images/logo.gif
                     templates/project/public/theme/images/menu_hili.gif
                     templates/project/public/theme/images/menu_hover.gif
                     templates/project/public/theme/images/peel.gif
                     templates/project/public/theme/images/ql_rss.gif
                     templates/project/public/theme/readme.txt
                     templates/project/public/theme/style.css
                     templates/project/Setup.hs
                     templates/project/src/AppControl.hs
                     templates/project/src/AppLogger.hs
                     templates/project/src/AppState.hs
                     templates/project/src/AppView.hs
                     templates/project/src/Main.hs
                     templates/project/templates/readme.st

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Library
  exposed-modules:     Happstack.Server.HSP.HTML
                       Happstack.Server.HStringTemplate
                       Happstack.State.ClockTime
  other-modules:       Paths_happstack

  build-depends:       base             >= 3,
                       bytestring,
                       happstack-data   >= 0.1.9 && < 0.3,
                       happstack-ixset  >= 0.1.9 && < 0.3,
                       happstack-server >= 0.1.9 && < 0.3,
                       happstack-state  >= 0.1.9 && < 0.3,
                       happstack-util   >= 0.1.9 && < 0.3,
                       hslogger,
                       hsp              >= 0.4.5 && < 0.5,
                       HStringTemplate  >= 0.4.3 && < 0.5,
                       mtl,
                       old-time,
                       utf8-string
                       
  if flag(base4)
    Build-Depends:     base >= 4 && < 5, syb
  else
    build-depends:     hsx              == 0.4.5,
                       haskell-src-exts == 0.3.9

  hs-source-dirs:      src

  ghc-options:         -Wall

Executable happstack
  build-depends:       directory >= 1,
                       filepath >= 1
                       
  hs-source-dirs:      commands
  main-is:             happstack.hs

