Name:         guestbook
Version:      1.0
Author:       Jeremy Shaw <jeremy@seereason.com>, Matthew Elder <matt@mattelder.org>
Copyright:    2009-2011, Jeremy Shaw
License:      BSD3
License-file: COPYING
Stability:    Experimental
Category:     Web
Synopsis: An example guestbook application which uses happstack and HSP
Description:
 This small example guestbook makes an excellent starting point for
 your own happstack applications.
Cabal-version: >= 1.4.0.0
Build-type: Custom
Data-files: 
        public/theme/style.css
        public/theme/images/date.gif
        public/theme/images/ql_rss.gif
        public/theme/images/header_loop.gif
        public/theme/images/blockquote.gif
        public/theme/images/menu_hili.gif
        public/theme/images/grunge.gif
        public/theme/images/entrymeta.gif
        public/theme/images/logo.gif
        public/theme/images/peel.gif
        public/theme/images/menu_hover.gif
        public/theme/readme.txt

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Executable guestbook-server
 Main-Is: Main.hs
 hs-source-dirs: src

 GHC-Options: -threaded -Wall -Wwarn -O2 -fno-warn-name-shadowing -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-binds -fno-warn-orphans -fwarn-unused-imports
 Build-depends: extensible-exceptions,
                happstack,
                happstack-data,
                happstack-hsp,
                happstack-hstringtemplate,
                happstack-server,
                happstack-state,
                happstack-util,
                hsp,
                hsx,
                hslogger,
                mtl,
                old-time,
                old-locale,
                utf8-string



 if !os(windows)
   -- Cabal has a bug on windows and cannot find trhsx
   Build-Tools: trhsx

 if flag(base4)
    Build-Depends: base >= 4 && < 5, syb
